# jarvis_factory

./: .gitignore  README.md  pyproject.toml  requirements.txt  version.properties
.github/workflows/: python-build.yml
jarvis_factory/: db_context.py  startup.py
jarvis_factory/factories/: jcalc.py  jdb.py  jdu.py  jorm.py
jarvis_factory/support/: const_data.py  constants.py  functions.py
jarvis_factory/support/jdb/: services.py
jarvis_factory/support/jdu/: initializers.py
jarvis_factory/temp/: temp_db.py
tests/: test_factories.py
