[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis_factory"
version = "0.1.18-techno"
dependencies = [
    "jarvis_calc@ git+https://github.com/PickAim/jarvis_calc.git@v.0.1.16",
    "jarvis_db@ git+https://github.com/PickAim/jarvis_db.git@v.0.1.22",
    "jdu@ git+https://github.com/PickAim/jdu.git@v.0.1.17-techno"
]
